fix logo on small screens

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -16,3 +16,10 @@ li.gallery {
 	margin: 2%;
 	list-style: none;
 }
+
+.logo {
+	background-size: contain;
+	margin-left: 2%;
+	margin-right: 2%;
+}
+
